Tmi2 156/convert to lambda proxy (#22)
* adds lambda handler, and add all the dependency it needs.
adds env variables

* fix Lambda handler class

* update dockerfile

* tidy up

* fix tests

* try change springboot command with docker one specifying the dockerfile to use

* try adding profile

* try adding profile

* try adding profile and passing env variable

* adds sam template

* fix template to accept only get requests

* try run aws sam in the github actions

* try run aws sam in the github actions 1

* try run aws sam in the github actions 2

* try run aws sam in the github actions 3

* try run aws sam in the github actions 4

* removes network from run serenity docker command

* add start-api command and change default port from 3000 to 8080

* add start-api command and change port from 3000 to 8080

* add start-api command and change port from 3000 to 8080 2

* add start-api command and change port from 3000 to 8080 3

* try adding Connor job to see if integration will work

* try adding Connor job to see if integration will work 1

* change host

* debugging

* debugging 2

* debugging 3

* debugging 3

* debugging 3

* debugging 3

* debugging 3

* remove integration test from the feature.yml